--- a/style1.css
+++ b/style1.css
@@ -83,18 +83,29 @@ ul li a:hover {
 }
 .button {
     position: absolute;
-    top: 62%;
+    top: 100%;
     left: 50%;
     transform: translate(-50%,-50%);
 }
 .btn {
     border: 1px solid #fff;
     padding: 10px 30px;
-    color: #fff;
+    color: #000;
     text-decoration: none;
     transition: 0.6s ease;
 }
 .btn:hover {
     background-color: #fff;
     color: #000;
+}
+.title p {
+    position: absolute;
+    text-align: center;
+    color: #fff;
+    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+.title p{
+    color:#ffffff;
 }
